--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,17 +1,36 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-base: core20 # the base snap is the execution environment for this snap
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+name: neomutt-snap
+base: core20
+version: '20220415'
+summary: NeoMutt is a command line mail reader (or MUA)
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
-
+  Command line mail reader based on Mutt, with added features Neomutt supports
+  all the features that are supported by Mutt, including POP and IMAP support,
+  SSL encryption and SASL authentication, threading and GPG support.
+ 
+  On the top of that, neomutt provides:
+  * Notmuch: a mail indexing tools that provides advanced features such as
+    full-text search, thread reconstruction and added features.
+  * Color attachment headers using regex, just like mail bodies.
+  * Custom rules for theming the mail index.
+  * NNTP support.
+  * Visual progress bar for slow operations.
+  * Trash folder.
 grade: devel # must be 'stable' to release into candidate/stable channels
 confinement: devmode # use 'strict' once you have the right plugs and slots
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
-    plugin: nil
+  neomutt:
+    plugin: dump
+    source: https://github.com/neomutt/neomutt.git
+    source-tag: '20220415'
+    build-packages:
+      - libidn11-dev
+      - libncurses-dev
+      - libxml2-utils
+      - gettext
+      - tclsh
+      - xsltproc
+    override-build: |
+      set -e -u -x
+      ./configure --disable-doc --prefix=/usr
+      make install DESTDIR=${SNAPCRAFT_PART_INSTALL}
