--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -17,7 +17,7 @@ description: |
   * Trash folder.
 website: https://neomutt.org
 contact: https://github.com/nicolasbock/neomutt-snap/issues
-license: apache-2.0
+license: Apache-2.0
 grade: stable
 confinement: strict
 
