Change HOME to point to user data
Signed-off-by: Nicolas Bock <nicolasbock@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -27,6 +27,8 @@ confinement: strict
 
 apps:
   neomutt:
+    environment:
+      HOME: ${SNAP_USER_COMMON}
     command: usr/bin/neomutt
     plugs:
       - home
