--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,11 +19,11 @@ jobs:
         uses: snapcore/action-build@v1
         id: snapcraft
       - name: Install neomutt snap
-        run: sudo snap install --devmode ./neomutt-snap_*.snap
+        run: sudo snap install --devmode ./neomutt_*.snap
       - name: Test snap
         run: |
-          snap connections neomutt-snap
-          neomutt-snap.neomutt --help
+          snap connections neomutt
+          neomutt.neomutt --help
       - name: Store snap artifact
         uses: actions/upload-artifact@v2
         with:
