--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Test snap
         run: |
           snap connections neomutt
-          neomutt.neomutt --help
+          neomutt --help
       - name: Store snap artifact
         uses: actions/upload-artifact@v2
         with:
