--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -3,11 +3,13 @@ base: core20
 adopt-info: neomutt
 summary: NeoMutt is a command line mail reader (or MUA)
 description: |
-  Command line mail reader based on Mutt, with added features Neomutt supports
-  all the features that are supported by Mutt, including POP and IMAP support,
-  SSL encryption and SASL authentication, threading and GPG support.
+  Command line mail reader based on Mutt, with added features.
  
-  On the top of that, neomutt provides:
+  Neomutt supports all the features that are supported by Mutt, including
+  `POP` and `IMAP` support, `SSL` encryption and `SASL` authentication,
+  threading and `GPG` support.
+ 
+  In addition, neomutt provides:
   * Notmuch: a mail indexing tools that provides advanced features such as
     full-text search, thread reconstruction and added features.
   * Color attachment headers using regex, just like mail bodies.
