Add basic CI test for oauth2.py
Signed-off-by: Nicolas Bock <nicolasbock@gmail.com>

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -24,6 +24,7 @@ jobs:
         run: |
           snap connections neomutt
           neomutt --help
+          neomutt.oauth2 --help
       - name: Store snap artifact
         uses: actions/upload-artifact@v2
         with:
