Add `local-control` interface
Signed-off-by: Nicolas Bock <nicolasbock@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -70,6 +70,7 @@ apps:
     command: usr/bin/neomutt
     plugs:
       - home
+      - locale-control
       - network
   oauth2:
     command: bin/oauth2
