--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -125,6 +125,8 @@ parts:
         --kyotocabinet \
         --lmdb \
         --qdbm \
+        --disable-idn \
+        --idn2 \
         --tokyocabinet \
         --prefix=/usr
       make
