--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -100,6 +100,7 @@ parts:
       - libncurses-dev
       - libnotmuch-dev
       - libqdbm-dev
+      - librocksdb-dev
       - libsasl2-dev
       - libtokyocabinet-dev
       - libxml2-utils
@@ -128,6 +129,7 @@ parts:
         --disable-idn \
         --idn2 \
         --tokyocabinet \
+        --rocksdb \
         --prefix=/usr
       make
       NEOMUTT_TEST_DIR="$(readlink --canonicalize ${SNAPCRAFT_PART_BUILD}/../../neomutt-test-files/build)" \
