Add `urlview` and `urlscan` to snap
Signed-off-by: Nicolas Bock <nicolasbock@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -21,6 +21,7 @@ description: |
     https://neomutt.org/guide/optionalfeatures#6-%C2%A0oauthbearer-and-xoauth2-support
     for usage details.
   * The `w3m`, `lynx`, `links`, `links2`, and `elinks` text web browsers.
+  * `urlview` and `urlscan`.
 
   The snap version of neomutt expects configuration files in
 
@@ -161,6 +162,8 @@ parts:
       - lynx
       - neovim
       - nvi
+      - urlscan
+      - urlview
       - vim
       - w3m
   neomutt-test-files:
