--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -66,6 +66,11 @@ source-code: https://github.com/nicolasbock/neomutt-snap
 grade: stable
 confinement: strict
 
+# plugs:
+#   home:
+#   locale-control:
+#   network:
+
 apps:
   neomutt:
     command: usr/bin/neomutt
