Link `vim` to `vim.basic`
This step is normally done via the alternatives mechanism.

Signed-off-by: Nicolas Bock <nicolasbock@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -185,6 +185,9 @@ parts:
       - urlview
       - vim
       - w3m
+    override-prime: |
+      snapcraftctl prime
+      ln -s vim.basic usr/bin/vim
   neomutt-test-files:
     plugin: dump
     source: https://github.com/neomutt/neomutt-test-files.git
