Properly disable RocksDB on non-amd64 arches
Signed-off-by: Nicolas Bock <nicolasbock@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -144,6 +144,8 @@ parts:
       )
       if dpkg -l librocksdb-dev; then
         HEADER_CACHES=( ${HEADER_CACHES[@]} --rocksdb )
+      else
+        HEADER_CACHES=( ${HEADER_CACHES[@]} --disable-rocksdb )
       fi
       ./configure \
         --everything \
